TCOMP-1331 upgrade docker base image to 8u191